--- a/template-menu/css/style.css
+++ b/template-menu/css/style.css
@@ -4,6 +4,10 @@ h1, h2, h3, h4, h5, h6, p, li, a, span{
 	font-family: 'Open Sans', sans-serif;
 }
 
+label{
+	cursor: pointer;
+}
+
 .nav-list>li>a{
 	text-decoration: none;
 }
@@ -134,7 +138,8 @@ ul{
 
 .sidbar{
 	width: 15%;
-	height:94vh;
+	height:100%;
+	min-height: 94vh;
     float: left;
     position: static;
     padding-left: 0;
@@ -234,8 +239,9 @@ ul{
     background-color: #40a8be;
 }
 
-.nav-list li a span{
+.nav-list li a label{
 	color: #585858;	
+	width: 100%;
     height: 39px;
     line-height: 39px;
     padding-left: 7px;
@@ -247,6 +253,29 @@ ul{
     background-color: #FFF;
 }
 
-.nav-list li a span:hover{
+.nav-list li a label:hover{
 	color: #40a8be;
+}
+
+.check-nav li{
+	padding-left: 25px;
+	height: 39px;
+}
+
+.check-nav li a{
+	text-decoration: none;
+	line-height: 39px;
+	color: #848484;
+}
+
+#arquivo, #compras, #financeiro, #produtos, #contabilidade, #gerencial, #utilitario, #relatorio{
+	display: none;
+}
+
+.checkbox-wrapper{
+	display: none;
+}
+
+input[type="checkbox"]:checked ~ .checkbox-wrapper{
+	display: block;
 }
