--- a/template-menu/css/style.css
+++ b/template-menu/css/style.css
@@ -1,4 +1,7 @@
-/*Symac Gestão Style*/
+/*
+Autor: Luiz Augusto
+Symac Gestão Style
+*/
 
 h1, h2, h3, h4, h5, h6, p, li, a, span{
 	font-family: 'Open Sans', sans-serif;
