--- a/template-menu/css/style.css
+++ b/template-menu/css/style.css
@@ -3,6 +3,10 @@ Autor: Luiz Augusto
 Symac Gestão Style
 */
 
+body{
+    background-color: #fbfbfb;
+}
+
 h1, h2, h3, h4, h5, h6, p, li, a, span{
 	font-family: 'Open Sans', sans-serif;
 }
@@ -309,14 +313,25 @@ input[type="checkbox"]:checked ~ .checkbox-wrapper{
     border: 1px solid #e5e5e5;
 }
 
+.section{
+    background-color: #fbfbfb;
+}
+
 .conteudo{
-	width: 100%;
-	min-height: 400px;
-	padding:0 10px;
+    padding-bottom: 20px;
+}
+
+.grafico{
+    width: calc(50% - 20px);
+    min-height: 220px;
+    border:1px solid #e5e5e5;
+    margin: 20px 0 0 20px;
+    border-radius: 5px;
+    background-color: #ffffff;
 }
 
 .footer{
-	width: 100%;
+    width: 100%;
 	border-top: 3px double #E5E5E5;
 }
 
@@ -328,4 +343,8 @@ input[type="checkbox"]:checked ~ .checkbox-wrapper{
 .footer p span{
 	font-weight: 700;
 	color: #40a8be;
+}
+
+.container{
+    width: 1100px!important;
 }
