--- a/template-menu/css/style-responsive.css
+++ b/template-menu/css/style-responsive.css
@@ -2,8 +2,35 @@
 /*Arquivo responsável pela responsividade!*/
 
 @media (max-width: 800px){
+
+	body{
+		background-color: #1e6473;
+	}
+
+	.fa-bars{
+		width: 42px;
+		display: block;
+		font-size: 1.5em;
+		color: #fff;
+		border:2px solid #ffffff;
+		border-radius: 5px;
+		padding: 5px 10px;
+		margin-right: 10px;
+		margin-top: 5px;
+		background-color: #1e6473;
+		margin-left: 10px;
+	}
+
 	.ace-nav, .input-group, .sidbar{
 		display: none;
+	}
+
+	.sidbar{
+		display: block;
+		position: absolute;
+    	z-index: 999;
+    	width: 80%;
+    	border-bottom: 1px solid #ccc;
 	}
 
 	.container{
@@ -17,5 +44,17 @@
 
 	.main-content{
 		width: 100%;
+	}
+
+	.chek-sid{
+		display: none;
+	}
+
+	#responsivo-icon{
+		display: block;
+	}
+
+	input[type="checkbox"]:checked ~ .chek-sid{
+	display: block;
 	}
 }
