--- a/template-menu/css/style.css
+++ b/template-menu/css/style.css
@@ -210,7 +210,7 @@ ul{
 .breadcrumbs{
 	margin-top: 3px;
 	float: right;
-	width: 200px;
+	width: 20%;
 }
 
 .nav-list li{
@@ -322,7 +322,7 @@ input[type="checkbox"]:checked ~ .checkbox-wrapper{
 }
 
 .grafico{
-    width: calc(50% - 20px);
+    width: calc(33.33333333% - 20px);
     min-height: 220px;
     border:1px solid #e5e5e5;
     margin: 20px 0 0 20px;
@@ -346,5 +346,6 @@ input[type="checkbox"]:checked ~ .checkbox-wrapper{
 }
 
 .container{
-    width: 1100px!important;
+    width: 100%!important;
+    padding: 0 20px;
 }
